# ski_data

./: README.md  Skiturer Sunnmøre - Langturer.csv  Skiturer Sunnmøre - Turer.csv  csv_to_json.ipynb  csv_to_json.py  data.db  generate_json.ipynb  linkups.json  package.json  pnpm-lock.yaml  pyproject.toml  routes.json
.githooks/: pre-commit
