[tool.poetry]
name = "kartorama"
version = "0.1.0"
description = ""
authors = ["Eskild Skov Pedersen  <eskild@eskildskov.no>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.2"
pydantic = "^1.8.1"
ipykernel = "^5.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
