[tool.poetry]
name = "ski_data"
version = "0.1.0"
description = ""
authors = ["Eskild Skov Pedersen  <eskild@eskildskov.no>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ipykernel = "^6.6.0"
pandas = "^1.3.5"
numpy = "^1.21.4"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
