[tool.poetry]
name = "ski_data"
version = "0.1.0"
description = ""
authors = ["eskildskov <eskild.skov.pedersen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
requests = "^2.28.2"
ipykernel = "^6.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
